samples/_failures_safe/1761148867_2745b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0763f124.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_0763f124.c:163:9: error: expected declaration or statement at end of input
  163 |         parser_advance(parser);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_0763f124.c:163:9: error: expected declaration or statement at end of input
